--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
+    "@tanstack/react-query": "^5.51.16",
     "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.10",
     "localforage": "^1.10.0",
@@ -19,8 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.13.0",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.22.2",
+    "react-scramble": "^0.5.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.2"
   },
