--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
     "@tanstack/react-query": "^5.51.16",
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.10",
     "localforage": "^1.10.0",
