--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "@tanstack/react-query": "^5.51.16",
     "@uploadcare/react-uploader": "^1.0.0",
     "aos": "^3.0.0-beta.6",
-    "framer-motion": "^11.0.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "html-react-parser": "^5.1.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.0.1",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.22.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -37,7 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.11",
     "vite": "^5.1.4"
   }
 }
