--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.22.2",
+    "react-use-scripts": "^2.0.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.2",
     "tailwind-merge": "^2.5.2"
